--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,17 @@
 {
   "manifest_version": 3,
-  "name": "Auto Click Extension",
-  "version": "1.1",
+  "name": "BOI KeepAlive",
+  "version": "1.5",
   "permissions": ["tabs", "scripting", "storage"],
   "background": {
     "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "popup.html"
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "48": "icons/icon-48.png",
+      "128": "icons/icon-128.png"
+    }
   },
   "content_scripts": [
     {
